@@ -2,6 +2,9 @@
 Change log for block_taskchain_navigation
 ========================================
 
+2022-02-28 (27)
+ - fix deprecated strings and backgroundimage-size on Moodle 4.x
+
 2022-02-21 (26)
  - do not try to regrade data, forum and glossary activities for which ratings are disabled.
 
